# IncrementalPTXJIT

./: .gitignore  CMakeLists.txt  IncrementalPTXJIT.kdev4  README.md
include/: argc_helper.hpp  backend.hpp
src/: argc_helper.cpp  backend.cpp  main.cpp
